--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
   
     <title>Meu Serviço - BETA</title>
   </head>
-  <body style="background-color: #f2f2f2">
+  <body style="background-color:#ecf0f1">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
